--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -41,8 +41,12 @@
                 <data android:mimeType="image/*" />
             </intent-filter>
         </activity>
-
-        <receiver android:name=".receiver.AlarmReceiver" />
+        <activity android:name=".PetAcceptInterface"></activity>
+        <activity android:name=".DebugInterface"></activity>
+        <activity
+            android:name=".LateralMenu"
+            android:label="@string/title_activity_lateral_menu"
+            android:theme="@style/AppTheme.NoActionBar"></activity>
     </application>
 
 </manifest>
