--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,7 +2,7 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 25
-    buildToolsVersion "25.0.3"
+    buildToolsVersion '26.0.2'
     defaultConfig {
         applicationId "jessicamatheus.petproject"
         minSdkVersion 19
@@ -33,8 +33,11 @@ dependencies {
     compile 'com.github.CardinalNow:Android-CircleProgressIndicator:v0.2'
     compile 'com.github.glomadrian:Grav:1.1'
     compile 'com.android.support:design:25.3.1'
+    compile 'com.android.support:support-v4:22.0.0'
+
     testCompile 'junit:junit:4.12'
 }
+
 
 
 repositories {
